@@ -53,9 +53,9 @@ paramiko==3.4.0
     # via pipeformer (pyproject.toml)
 pycparser==2.22
     # via cffi
-pydantic==2.7.1
+pydantic==2.7.0
     # via pipeformer (pyproject.toml)
-pydantic-core==2.18.2
+pydantic-core==2.18.1
     # via pydantic
 pynacl==1.5.0
     # via paramiko
