@@ -1,12 +1,11 @@
 import logging
-import subprocess
 import uuid
 
 import httpx
 
 from src.integrations.timeweb.wrapper import TimewebWrapper
 from src.services.configuration.dto import PlaybookRunnable
-from src.services.utils import extract_compute_name, get_id_by_uniq
+from src.services.utils import add_to_known_hosts, extract_compute_name, get_id_by_uniq
 from src.services.validation.service import ValidationService
 
 
@@ -37,24 +36,6 @@ class ConfigurationService:
 
         return playbooks
 
-    @staticmethod
-    def _add_to_known_hosts(ip):
-        command = [
-            'ssh-keyscan', '-H', ip
-        ]
-        process = subprocess.Popen(command, stdout=subprocess.PIPE, stderr=subprocess.PIPE, universal_newlines=True)
-
-        for line in iter(process.stdout.readline, ''):
-            print(line.strip())
-
-        process.wait()
-
-        if process.returncode == 0:
-            logging.info(f"IP {ip} added to known_hosts")
-        else:
-            logging.error(f"Failed to add IP {ip} to known_hosts")
-            logging.error("STDERR:\n", process.stderr.read())
-
     def run_post_scripts(self, file_name, change_type):
         if change_type == 'D':
             logging.info("Chane type is delete, nothing to run")
@@ -76,7 +57,7 @@ class ConfigurationService:
 
         playbooks = self._save_playbooks(config)
 
-        self._add_to_known_hosts(compute_ipv4.ip)
+        add_to_known_hosts(compute_ipv4.ip)
         for pb in playbooks:
             logging.info(f"Executing '{pb.initial.name}' playbook")
             pb.run()
